<resources>

    <string name="app_name">Chaterinos</string>

    <string name="lblLogoApp">Powered by JM and JQ</string>


    <!-- Crear Usuario -->
    <string name="tituloActCrearUsuario">Registro de Usuario</string>
    <string name="lblNombreUsuarioCU">Usuario</string>
    <string name="lblClaveUsuarioCU">Contraseña</string>
    <string name="lblRepetirClaveCU">Repetir Contraseña</string>
    <string name="lblEmailCU">Email</string>

    <string name="txtNombreUsuarioCU">Nombre de Usuario</string>
    <string name="txtClaveUsuarioCU">Contraseña</string>
    <string name="txtEmailCU">Email</string>
    <string name="txtRepetirClaveCU">Repetir Contraseña</string>

    <string name="btnCrearUsuarioCU">Crear Usuario</string>
    <string name="btnCancelarCU">Cancelar</string>
    <string name="btnLimpiarCU">Limpiar</string>

    <string name="errorNombreUsuarioCU">El nombre de usuario ha de tener más de 3 carácteres</string>
    <string name="errorClaveUsuarioRepetidaCU">Las claves no coinciden</string>
    <string name="errorEmailUsuarioCU">Escriba un email válido</string>

    <string name="errorEmailUsuarioExisteCU">La dirección de correo ya existe</string>
    <string name="errorNombreUsuarioExisteCU">El nombre de usuario ya existe</string>
    <string name="errorNombreUsuarioLargoVacioCU">El nombre de usuario ya existe</string>


    <!-- Login -->
    <string name="tituloActLogin">Inicio de Sesión</string>
    <string name="lblUsuarioLogin">Usuario</string>
    <string name="lblClaveLogin">Contraseña</string>
    <string name="txtUsuarioLogin">Introduzca su usuario</string>
    <string name="txtClaveLogin">Introduzca su contraseña</string>
    <string name="swMantenerSesionLogin">Mantener sesión iniciada</string>
    <string name="btnEntrarLogin">Entrar</string>
    <string name="btnRecordarClaveLogin">¿Has olvidado la contraseña?</string>
    <string name="btnRegistrarLogin">¿Eres Nuevo?</string>
    <string name="snkBarClaveIncorrecta">El usuario o la contraseña son incorrectas</string>
    <string name="snkBarError">Ha ocurrido un error</string>


    <!-- Recordar contraseña -->
    <string name="tituloActRecordarClave">Recuperación de Contraseña</string>
    <string name="lblRecordarClaveRC">Escriba aquí el correo al que quiere que le enviemos una nueva contraseña provisional</string>
    <string name="txtCorreoRC">ejemplo@dominio.com</string>
    <string name="btnEnviarRC">Enviar correo</string>
    <string name="btnCancelarRC">Cancelar</string>
    <string name="tsCorreoEnviadoRC">Se envio el correo con exito</string>
    <string name="tsCorreoErrorRC">Error al enviar el correo</string>

    <!-- Nav Drawer/Menu principal -->
    <string name="tituloActMenuPrincipalApp">Menu Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_nombreusuario">Usuario</string>
    <string name="nav_nombrecompletousuario">Nombre Completo Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="mn_cerrarSesion">Cerrar Sesión</string>
    <string name="mn_cerrarsesion_mensaje">¿Estas seguro de querer cerrar sesión?</string>
    <string name="mn_cerrarsesion_aceptar">Aceptar</string>
    <string name="mn_cerrarsesion_cancelar">Cancelar</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_busqueda">Busqueda</string>
    <string name="menu_conversaciones">Conversaciones</string>
    <string name="menu_miperfil">Mi Perfil</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!-- Bienvenida usuario -->
    <string name="title_activity_bienvenida_usuario">Bienvenida Usuario</string>
    <string name="tab_text_1"></string>
    <string name="tab_text_2"></string>

    <!-- Bienvenida usuario -->
    <string name="msgBienvenidaB">¡¡Bienvenido a Chaterinos!!</string>
    <string name="btnCalendarioDialogoAceptarB">Aceptar</string>
    <string name="btnCalendarioDialogoCancelarB">Cancelar</string>
    <string name="lblRellenarDatosB">Rellene con sus datos personales</string>

    <string name="seleccioneEstadoCivil">Seleccione su estado civil</string>
    <string name="rBtnSolteroB">Soltero/a</string>
    <string name="rBtnCasadoaB">Casado/a</string>
    <string name="rBtnViudoaB">Viudo/a</string>

    <string name="lblAlturaB">Altura</string>

    <string name="genero1B">Seleccione su género</string>
    <string name="genero2B">Masculino</string>
    <string name="genero3B">Femenino</string>
    <string name="genero4B">Otro</string>

    <string name="lblAddFotosGaleriaB">Puedes añadir unas cuantas fotos a tu galería desde la opcion "Mi Perfil"</string>
    <string name="lblAddFotosGaleriaMiP">Editar Galería de Fotos</string>
    <string name="lblGuardarCambios">Guardar cambios</string>
    <string name="perfilCreadoExito">¡Perfil creado, Bienvenido!</string>
    <string name="relleneDatos">Rellene todos los campos, por favor</string>
    <string name="seleccioneEstadoCivilError">Seleccione su estado civil</string>
    <string name="seleccioneGeneroError">Seleccione su género</string>


    <!-- Busqueda de parametros -->
    <string name="lblRangeEdadBusqueda">Rango de Edad</string>
    <string name="btnBuscarBusqueda">Establecer</string>
    <string name="btnPredeterminadaBusqueda">Deshacer</string>

    <string name="rBtnSolteroBusqueda">Soltero/a</string>
    <string name="rBtnCasadoaBusqueda">Casado/a</string>
    <string name="rBtnViudoaBusqueda">Viudo/a</string>

    <string name="genero1Busqueda"><b><i>Seleccione su género</i></b></string>
    <string name="genero2Busqueda">Masculino</string>
    <string name="genero3Busqueda">Femenino</string>
    <string name="genero4Busqueda">Otro</string>

    <string name="toastGenroBusqueda">No has seleccionado un género</string>
    <string name="toastNoEstadoCivilBusqueda">No has seleccionado un estado civil</string>
    <string name="toastPrefCambiadas">Preferencias de busqueda actualizadas</string>
    <string name="toastPrefDeshechas">Preferencias de busqueda anuladas</string>


    <!-- Vista de Perfil Usuario -->
    <string name="tituloVistaPerfilUsuario">Perfil del Usuario</string>
    <string name="btnChatearVP">Mandar Mensaje</string>
    <string name="btnCancelarVP">Cancelar</string>


    <string name="crop_image_menu_crop">Aceptar</string>
    <string name="crop_image_activity_title">Ajustar Foto</string>


    <string name="errorConexion">Error de conexión</string>
    <string name="cambiosGuardados">!Cambios Guardados¡</string>

    <!-- Chat -->
    <string name="txtEnviarMensaje">Escribe un mensaje</string>

    <string name="configuracion">Configuración</string>


    <string name="CorreoElectronicoConf">Correo Electronico</string>
    <string name="ClaveConf">Clave</string>
    <string name="GuardarCambiosConf">Guardar Cambios</string>
    <string name="BorrarPerfilConf">Borrar Perfil</string>

    <string name="errorEmailUsuarioNoExisteRC">La dirección de correo no existe en la Base de Datos</string>


</resources>
