<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondappac"
    tools:context=".CrearUsuario">

    <TextView
        android:id="@+id/lblNombreUsuarioCU"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/lblNombreUsuarioCU"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblClaveUsuarioCU"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblClaveUsuarioCU"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtClaveUsuarioCU"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNombreUsuarioCU" />

    <TextView
        android:id="@+id/lblEmailCU"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblRepetirClaveCU"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtEmailUsuarioCU"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblClaveUsuarioCU" />

    <TextView
        android:id="@+id/lblEmailCU2"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/lblEmailCU"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtEmailCU"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmailCU" />

    <EditText
        android:id="@+id/txtNombreUsuarioCU"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/txtNombreUsuarioCU"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/lblNombreUsuarioCU"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtClaveUsuarioCU"
        android:layout_width="216dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txtClaveUsuarioCU"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtNombreUsuarioCU"
        app:layout_constraintStart_toStartOf="@+id/txtNombreUsuarioCU"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuarioCU" />

    <EditText
        android:id="@+id/txtEmailUsuarioCU"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txtRepetirClaveCU"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtClaveUsuarioCU"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtClaveUsuarioCU"
        app:layout_constraintTop_toBottomOf="@+id/txtClaveUsuarioCU" />

    <EditText
        android:id="@+id/txtEmailCU"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txtEmailCU"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtEmailUsuarioCU"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtEmailUsuarioCU"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailUsuarioCU" />

    <Button
        android:id="@+id/btnCrearUsuarioCU"
        style="@style/estiloBoton"
        android:layout_width="183dp"
        android:layout_height="42dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="104dp"
        android:text="@string/btnCrearUsuarioCU"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailCU" />

    <Button
        android:id="@+id/btnLimpiarCU"
        style="@style/estiloBoton"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnLimpiarCU"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrearUsuarioCU" />

    <Button
        android:id="@+id/btnCancelarCU"
        style="@style/estiloBoton"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnCancelarCU"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLimpiarCU"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>