<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondappac"
    tools:context=".Login">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsuarioLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtUsuarioLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtUsuarioLogin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutClaveLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsuarioLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtClaveLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtClaveLogin"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/swMantenerSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/swMantenerSesionLogin"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutClaveLogin" />

    <Button
        android:id="@+id/btnEntrarLogin"
        style="@style/estiloBotonPrincipal"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/botonprincipal"
        android:text="@string/btnEntrarLogin"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swMantenerSesion" />

    <ProgressBar
        android:id="@+id/cargaLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:indeterminateTint="@color/azulC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecordarClave" />

    <Button
        android:id="@+id/btnRegistrarLogin"
        style="@style/estiloBotonSecundario"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botonsecundario"
        android:text="@string/btnRegistrarLogin"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecordarClave"
        app:layout_constraintVertical_bias="0.954" />

    <TextView
        android:id="@+id/lblRecordarClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnRecordarClaveLogin"
        android:textColor="@color/azulO"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrarLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>