<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondappac">

    <Spinner
        android:id="@+id/spnGeneroBusqueda"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:popupBackground="@drawable/fondappac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rGroupBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGeneroBusqueda">

        <RadioButton
            android:id="@+id/rBoton1Busqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnSolteroB" />

        <RadioButton
            android:id="@+id/rBoton2Busqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnCasadoaB" />

        <RadioButton
            android:id="@+id/rBoton3Busqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rBtnViudoaB" />

    </RadioGroup>

    <TextView
        android:id="@+id/lblEdadMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRandoEdadBusqueda" />

    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/rangeSeekbar1"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_color="#DCDCDC"
        app:bar_highlight_color="@color/azulC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEdadMin"
        app:left_thumb_color="@color/azulO"
        app:left_thumb_color_pressed="@color/azulI"
        app:right_thumb_color="@color/azulO"
        app:right_thumb_color_pressed="@color/azulI" />

    <TextView
        android:id="@+id/lblEdadMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRandoEdadBusqueda" />

    <Button
        android:id="@+id/btnBuscarBusqueda"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botonprincipal"
        android:text="@string/btnBuscarBusqueda"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rangeSeekbar1"
        app:layout_constraintVertical_bias="0.903" />

    <TextView
        android:id="@+id/lblRandoEdadBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lblRangeEdadBusqueda"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroupBusqueda" />
</androidx.constraintlayout.widget.ConstraintLayout>